test/corpus/line-cont.txt
================================================================================
line continuation on setting values
================================================================================

[section]
multi = foo? \
bar ; not comment \
 bay\s \
still=value

multi2 =\
cont value \
#
# atop is not comment

legal = foo \
\
bar \
\
\
end
legal = foo \
\

# end of test

--------------------------------------------------------------------------------

(document
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value
        (setting_text)
        (setting_value_cont
          (setting_text))
        (setting_value_cont
          (setting_text))
        (setting_value_cont
          (setting_text))))
    (setting
      (setting_name)
      (setting_value
        (setting_value_cont
          (setting_text))
        (setting_value_cont
          (setting_text))))
    (comment
      (text))
    (setting
      (setting_name)
      (setting_value
        (setting_text)
        (setting_value_cont)
        (setting_value_cont
          (setting_text))
        (setting_value_cont)
        (setting_value_cont)
        (setting_value_cont
          (setting_text))))
    (setting
      (setting_name)
      (setting_value
        (setting_text)
        (setting_value_cont)
        (setting_value_cont))))
  (comment
    (text)))

===========================================
escaped backslash
===========================================

[section]
single = escaped backslash \\
multi = foo \
bar \\
multi = esc before line cont \\\
other esc seqs \t\t\ d

--------------------------------------------

(document
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value
        (setting_text)))
    (setting
      (setting_name)
      (setting_value
        (setting_text)
        (setting_value_cont
          (setting_text))))
    (setting
      (setting_name)
      (setting_value
        (setting_text)
        (setting_value_cont
          (setting_text))))))
