test/corpus/main.txt
================================================================================
one section
================================================================================

[a section title]
foo = bar

--------------------------------------------------------------------------------

(document
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value))))

================================================================================
many sections, some empty
================================================================================

# comment ...

[a section title]
  foo = bar
[section 2]
        foo    =      bar

[section 3, which is empty]
[section4]
2f_a3-x =  not! an equals sign...
foo = bar

# Interesting note about duplicates in tree-sitter:

# https://github.com/tree-sitter/tree-sitter/issues/130
# foo


--foo-- = bar
``foo`` = bar


# a straggler comment...


# another

--------------------------------------------------------------------------------

(document
  (comment
    (text))
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value)))
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value)))
  (section
    (section_name
      (text)))
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value))
    (comment
      (text))
    (comment
      (text))
    (comment
      (text))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value)))
  (comment
    (text))
  (comment
    (text)))

================================================================================
only comments
================================================================================
#      
#

--------------------------------------------------------------------------------

(document
  (comment
    (text))
  (comment
    (text)))

================================================================================
one section (empty)
================================================================================
[section with no content]

--------------------------------------------------------------------------------

(document
  (section
    (section_name
      (text))))

================================================================================
~/.aws/config
================================================================================
# AWS config doc:
#   https://docs.aws.amazon.com/credref/latest/refdocs/file-format.html

[default]
region = us-west-2              
               
output = json

[profile dev-user]
# foo
region =                  us-east-1
output = text

[profile developers]
role_arn = arn:aws:iam::123456789012:role/developers
# foo
# foo
source_profile = dev-user
               
region = us-west-2
output = json

# foo
               
--------------------------------------------------------------------------------

(document
  (comment
    (text))
  (comment
    (text))
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value)))
  (section
    (section_name
      (text))
    (comment
      (text))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value)))
  (section
    (section_name
      (text))
    (setting
      (setting_name)
      (setting_value))
    (comment
      (text))
    (comment
      (text))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value))
    (setting
      (setting_name)
      (setting_value)))
  (comment
    (text)))
